[package]
name = "cargo-rund-derive-impl"
version = "0.1.0"
edition = "2024"

[dependencies]
quote = "1.0.40"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.101"

[dev-dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = ["full"] }
