[package]
name = "ratadraw-tui"
version = "0.1.0"
edition = "2021"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = "0.29.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
ratzilla = "0.1.0"
ratatui = { version = "0.29.0", default-features = false }
web-sys = { version = "0.3.77", features = ["std",
    "MouseEvent", "KeyEvent", "KeyboardEvent", "HtmlElement", "CssStyleDeclaration"]}


[dependencies]
cfg-if = "1.0.1"
